# img

./: config.json  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keys.rs  lib.rs  main.rs  tinify.rs
ui/: index.html  main.js  styles.css
