[package]
name = "tinylocal"
version = "1.0.0"
description = "TinyPNG local image compressor"
authors = ["TinyLocal"]
edition = "2021"

[lib]
name = "tinylocal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
